sticky nav on single blog

--- a/assets/css/_inline-images.scss
+++ b/assets/css/_inline-images.scss
@@ -4,6 +4,7 @@
 
 .fr-dib{
   display: block;
+  text-align: right;
 }
 
 .fr-fil{
@@ -36,6 +37,5 @@
     text-transform: uppercase;
     font-size: 12px;
     font-weight: 900;
-
   }
 }
