--- a/assets/css/_blog-single.scss
+++ b/assets/css/_blog-single.scss
@@ -106,7 +106,92 @@
 
 .single-blog-content{
   padding: 50px 0;
+  position: relative;
+
+
+  min-height: 200vh;
+
+
 }
+
+.single-blog-content-cont{
+  display: flex;
+  // align-items: flex-start;
+
+  .single-blog-sticky-container{
+    position: sticky;
+    position: -webkit-sticky;
+    // border: 2px solid $toro_red;
+    max-width: 175px;
+    top: 350px;
+    h5{
+      text-transform: uppercase;
+      font-family: $knockout-lite;
+      margin-bottom: 10px;
+    }
+    .single-blog-social-container{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      // padding: 5px;
+      // max-width: 100px;
+
+      div{
+        // margin: 10px 15px;
+      }
+      img{
+        height: 20px;
+        width: auto;
+      }
+      .social-twitter{
+        img{
+          height: 17px;
+        }
+      }
+      .social-email{
+        img{
+          height: 17px;
+        }
+      }
+    }
+  }
+}
+
+.single-blog-sticky-upper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 15px;
+  border: 2px solid $toro_red;
+  border-left: 0px;
+  background-color: white;
+  position: absolute;
+  left: 0;
+  bottom: 100%;
+  width: 100%;
+}
+
+.single-blog-sticky-lower{
+  text-align: left;
+  padding: 15px;
+  border: 2px solid $toro_red;
+  border-top: 0px;
+  border-left: 0px;
+  h4{
+    font-family: $knockout-welter;
+    color: $toro_red;
+    line-height: 1em;
+    text-transform: uppercase;
+    font-size: 25px;
+    margin-bottom: 10px;
+  }
+  h6{
+    text-transform: uppercase;
+    font-family: $knockout-welter;
+  }
+}
+
 
 .hay-mas{
   .hay-mas-header{
@@ -252,30 +337,7 @@
   display: flex;
   align-items: center;
   margin-top: 50px;
-  .single-blog-social-container{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    border: 2px solid white;
-    padding: 5px;
-    div{
-      margin: 10px 25px;
-    }
-    img{
-      height: 20px;
-      width: auto;
-    }
-    .social-twitter{
-      img{
-        height: 17px;
-      }
-    }
-    .social-email{
-      img{
-        height: 17px;
-      }
-    }
-  }
+
   .single-blog-scroll{
     margin-left: 50px;
     cursor: pointer;
@@ -385,5 +447,26 @@
       }
     }
 
+  }
+}
+
+
+.single-blog-content-title{
+  text-align: center;
+  h2{
+    font-size: 5rem;
+    line-height: 4.3rem;
+    letter-spacing: 0.083rem;
+    text-transform: none;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #e4002b;
+    margin: 0;
+    margin-bottom: 16px;
+    font-family: "Knockout 68 A", "Knockout 68 B";
+  }
+  h4{
+    font-family: $domaine;
+    font-size: 22px;
   }
 }
