--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -9,11 +9,11 @@ body, html {
 
   overflow-x: hidden;
   -webkit-overflow-scrolling:touch !important;
-
+  position: relative;
 }
 
 body * {
-  box-sizing: inherit;
+  box-sizing: border-box;
 
 }
 
