--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -7,7 +7,7 @@ body, html {
   font-family: $knockout;
   box-sizing: border-box;
 
-  overflow-x: hidden;
+  // overflow-x: hidden;
   -webkit-overflow-scrolling:touch !important;
   position: relative;
 }
