--- a/templates/boxes/news_item.html
+++ b/templates/boxes/news_item.html
@@ -42,8 +42,8 @@
           <h4>{{current.fields.dek}}</h4>
           <h6>By {{current.fields.author}}</h6>
         </div>
-        <div class="single-blog-social">
-          <!-- <div class="single-blog-social-container">
+        <!-- <div class="single-blog-social">
+          <div class="single-blog-social-container">
             <div class='social-fb fb-share-button' data-href="{{current.request.absolute_url}}" data-layout="button_count">
               <a href="https://www.facebook.com/sharer/sharer.php?u={{current.request.absolute_url|urlencode}}" target="_blank">
                 <img src="{{ static('img/Facebook.png') }}" class='fb-xfbml-parse-ignore' alt="Facebook Icon" />
@@ -60,11 +60,11 @@
             <div class="social-email">
               <a href="mailto:?&body={{current.request.absolute_url}}"><img src="{{ static('img/Email.png') }}" alt="Email Icon"></a>
             </div>
-          </div> -->
+          </div>
           <div class="single-blog-scroll">
             <span>Scroll</span>
           </div>
-        </div>
+        </div> -->
       </div>
 
     </div>
