--- a/assets/css/_inline-images.scss
+++ b/assets/css/_inline-images.scss
@@ -24,6 +24,7 @@
 }
 
 .single-blog-content .standard-content .fr-img-caption{
+  max-width: 100%;
   box-sizing: border-box;
   padding: 16px 16px 5px 16px;
   border: 2px solid #e4002b;
