restructure of share article

--- a/assets/css/_blog-single.scss
+++ b/assets/css/_blog-single.scss
@@ -147,6 +147,7 @@
     max-width: 175px;
     min-width: 175px;
     top: 350px;
+    margin-bottom: 30px;
     h5{
       text-transform: uppercase;
       font-family: $knockout-lite;
