--- a/assets/css/_blog-single.scss
+++ b/assets/css/_blog-single.scss
@@ -194,6 +194,9 @@
   left: 0;
   bottom: 100%;
   width: 100%;
+  .single-blog-social-container{
+      padding: 0 20px;
+  }
 }
 
 .single-blog-social-container{
