--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -7,13 +7,13 @@ body, html {
   font-family: $knockout;
   box-sizing: border-box;
 
-  overflow-x: hidden;
+  // overflow-x: hidden;
   -webkit-overflow-scrolling:touch !important;
-
+  position: relative;
 }
 
 body * {
-  box-sizing: inherit;
+  box-sizing: border-box;
 
 }
 
