--- a/assets/css/_blog-single.scss
+++ b/assets/css/_blog-single.scss
@@ -50,7 +50,7 @@
     }
     .single-blog-info-header{
       background-color: $toro_red;
-      min-height: 100%;
+      height: 100%;
       width: 100%;
       padding: 40px 10%;
       display: flex;
