unset min height mobile for single header

--- a/assets/css/_blog-single.scss
+++ b/assets/css/_blog-single.scss
@@ -9,6 +9,7 @@
     overflow: initial;
     height: auto;
     margin-bottom: 30px;
+    min-height: unset;
   }
   .single-blog-img{
     // position: sticky;
