font weight changes inline

--- a/assets/css/_basic.scss
+++ b/assets/css/_basic.scss
@@ -80,7 +80,8 @@
 	}
 
 	b, strong{
-		font-family: $knockout-lite;
+		font-family: $knockout-bantam;
+		font-weight: 900;
 	}
 	em{
 		font-style: italic;
