--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -45,7 +45,9 @@ h6 {
 p {
   @include p-style;
   a{
-    text-decoration: underline;
+    text-decoration: none;
+    border-bottom: 2px solid $toro_red;
+    font-weight: 900;
   }
 }
 
