--- a/assets/css/_basic.scss
+++ b/assets/css/_basic.scss
@@ -36,7 +36,7 @@
 	}
 // 	fonts
 	a{
-		text-decoration: underline;
+		// text-decoration: underline;
 	}
 	p{
 		margin-bottom: 20px;
@@ -80,7 +80,7 @@
 	}
 
 	b, strong{
-		font-family: $knockout-bantam;
+		font-family: $knockout-welter;
 		font-weight: 900;
 	}
 	em{
