--- a/assets/css/_our_story.scss
+++ b/assets/css/_our_story.scss
@@ -76,7 +76,7 @@ align-items: center;
 	}
 }
 
-.standard-content .content-gallery{
+.single-blog-content .content-gallery{
 	max-width: 1024px;
 	margin: 15px auto 80px auto;
 	padding: 0px 155px;
