--- a/assets/css/_inline-images.scss
+++ b/assets/css/_inline-images.scss
@@ -1,28 +1,3 @@
-.fr-dil{
-  display: inline-block;
-}
-
-.fr-dib{
-  display: block;
-  text-align: right;
-}
-
-.fr-fil{
-  float: left;
-  max-width: 50%;
-  margin-right: 20px;
-}
-
-.fr-fir{
-  float: right;
-  max-width: 50%;
-  margin-left: 20px;
-  text-align: right;
-  .fr-inner{
-    display: inline-block;
-  }
-}
-
 .single-blog-content .standard-content .fr-img-caption{
   max-width: 100%;
   box-sizing: border-box;
@@ -39,4 +14,31 @@
     font-size: 12px;
     font-weight: 900;
   }
+}
+
+.single-blog-content .standard-content {
+  .fr-dil{
+    display: inline-block;
+  }
+
+  .fr-dib{
+    display: block;
+    text-align: right;
+  }
+
+  .fr-fil{
+    float: left;
+    max-width: 50%;
+    margin-right: 20px;
+  }
+
+  .fr-fir{
+    float: right;
+    max-width: 50%;
+    margin-left: 20px;
+    text-align: right;
+    .fr-inner{
+      display: inline-block;
+    }
+  }  
 }
