inline images bottom margin

--- a/assets/css/_inline-images.scss
+++ b/assets/css/_inline-images.scss
@@ -30,6 +30,7 @@
     float: left;
     max-width: 50%;
     margin-right: 20px;
+    margin-bottom: 20px;
   }
 
   .fr-fir{
@@ -37,8 +38,9 @@
     max-width: 50%;
     margin-left: 20px;
     text-align: right;
+    margin-bottom: 20px;
     .fr-inner{
       display: inline-block;
     }
-  }  
+  }
 }
