--- a/assets/css/_our_story.scss
+++ b/assets/css/_our_story.scss
@@ -80,6 +80,11 @@ align-items: center;
 	max-width: 1024px;
 	margin: 15px auto 80px auto;
 	padding: 0px 155px;
+	@media (max-width: 920px){
+		padding: 0px;
+		margin: 15px auto 60px auto;
+
+	}
 }
 
 #featured_press{
