--- a/assets/css/_basic.scss
+++ b/assets/css/_basic.scss
@@ -36,16 +36,18 @@
 		}
 
 		.content-subheader{
-			margin-bottom: 20px;
+			margin-bottom: 30px;
 			h5{
 				text-transform: uppercase;
-				font-size: 30px;
+				font-size: 55px;
 				color: $mid_grey;
 				max-width: 80%;
 				margin: auto;
 				text-align: center;
+				font-family: $knockout-lite;
+				line-height: 0.9em;
 				@media (max-width: 767px){
-					width: 100%:
+					width: 100%;
 					max-width: unset;
 				}
 			}
