--- a/templates/index.html
+++ b/templates/index.html
@@ -284,7 +284,7 @@
   </div>
 </section>
 
-<!-- <section class="home-happenings">
+<section class="home-happenings">
   <div class="content-margins">
     <div class="section-title-container">
       <img src="{{ static('img/yellow_triangle.png')}}" alt="">
@@ -311,7 +311,7 @@
       <a href="{{pages.by_slug['happenings'].url}}" class='more-info'>View All</a>
     </div>
   </div>
-</section> -->
+</section>
 
 <section class="home-shop">
   <div class="content-margins">
