footer menu overflow

--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -264,6 +264,7 @@ address.site-info {
       flex-wrap: wrap;
       align-items: space-between;
       max-height: 150px;
+      overflow: hidden;
     }
   }
 }
