--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -269,6 +269,7 @@ address.site-info {
         width: auto;
         display: flex;
         flex-wrap: wrap;
+        margin-top: 0px; 
       }
     }
   }
