--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -336,10 +336,12 @@
 }
 .happenings-events{
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 30px;
+  justify-content: flex-start;
+
+  flex-wrap: wrap;
   .happenings-event{
     width: 24%;
+    margin-bottom: 20px;
     padding: 10px;
     border: 2px solid $toro_red;
     display: flex;
@@ -348,6 +350,11 @@
     text-decoration: none;
     color: black;
     transition: 250ms ease background-color, 250ms ease color;
+    margin-right: 1.33%;
+
+    &:nth-child(4n){
+      margin-right: 0px;
+    }
 
     .happenings-upper{
       margin-bottom: 20px;
@@ -411,15 +418,17 @@
     .happenings-event{
       @media (max-width: 1200px){
         width: 32%;
-        &:last-child(){
-          display: none;
+        margin-right: 3%;
+        &:nth-child(3n){
+          margin-right: 0px;
         }
       }
       @media (max-width: 667px){
         width: 100%;
         margin-bottom: 30px;
+        margin-right: 0px;
         &:last-child(){
-          display: block;
+          // display: block;
         }
       }
     }
