tickets in new tab

--- a/templates/boxes/event.html
+++ b/templates/boxes/event.html
@@ -41,7 +41,7 @@
           <div class="tickets-and-social">
             {% if current.external_url %}
               <div class="event-tickets">
-                <a href="{{current.external_url}}" class="more-info">Tickets</a>
+                <a href="{{current.external_url}}" class="more-info" target='_blank'>Tickets</a>
               </div>
             {% endif %}
             <div class="single-blog-social-container">
