--- a/templates/boxes/news_item.html
+++ b/templates/boxes/news_item.html
@@ -262,8 +262,8 @@
 </article>
 
 
-
-<!-- <section class="hay-mas">
+<!-- 
+<section class="hay-mas">
   <div class="content-margins">
     <div class="hay-mas-header">
       <h6>¡Hay Más!</h6><span>Check out everything the Mercado has to offer.</span>
@@ -273,7 +273,7 @@
         <a href="{{boxes.kiosks.all[0].url}}">
           <h6>Kiosks</h6>
           <div class="hay-mas-link-icon">
-            <img src="{{boxes.kiosks.all[0].fields.global_icon.url}}" alt="{{boxes.kiosks.all[0].fields.global_icon.alt}}">
+            <img src="{{boxes.kiosks.all[0].fields.global_icon.url}}" alt="{{boxes.kiosks.all[0].fields.global_icon.alt_text}}">
             <span>{{boxes.kiosks.all[0].fields.hover_text}}</span>
           </div>
           <h4>{{boxes.kiosks.all[0].name}}</h4>
@@ -284,7 +284,7 @@
         <a href="{{boxes.events.all[0].url}}">
           <h6>Happenings</h6>
           <div class="hay-mas-link-icon with-padding">
-            <img src="{{boxes.events.all[0].image.url}}" alt="{{boxes.events.all[0].image.alt}}">
+            <img src="{{boxes.events.all[0].images[0].url}}" alt="{{boxes.events.all[0].images[0].alt_text}}">
             <span></span>
           </div>
           <h4>{{boxes.events.all[0].name}}</h4>
@@ -293,9 +293,9 @@
 
       <div class="hay-mas-link">
         <a href="{{boxes.blog.all[0].url}}">
-          <h6>Mercado Magazine</h6>
+          <h6>El Blog</h6>
           <div class="hay-mas-link-icon with-padding">
-            <img src="{{boxes.blog.all[0].image.url}}" alt="{{boxes.blog.all[0].image.alt}}">
+            <img src="{{boxes.blog.all[0].image.url}}" alt="{{boxes.blog.all[0].image.alt_text}}">
             <span></span>
           </div>
           <h4>{{boxes.blog.all[0].name}}</h4>
@@ -306,10 +306,10 @@
         <a href="{{pages.by_slug.shop.url}}">
           <h6>Shop</h6>
           <div class="hay-mas-link-icon">
-            <img src="{{pages.by_slug.shop.fields['online-products'].products[0].image.url}}" alt="{{pages.by_slug.shop.fields['online-products'].products[0].image.alt}}">
-            <span>{{pages.by_slug.shop.fields['online-products'].products[0].hover_text}}</span>
+            <img src="{{boxes.shop.all[0].fields.global_icon.url}}" alt="{{boxes.shop.all[0].fields.global_icon.alt}}">
+            <span>{{boxes.shop.all[0].fields.hover_text}}</span>
           </div>
-          <h4>{{pages.by_slug.shop.fields['online-products'].products[0].name}}</h4>
+          <h4>{{boxes.shop.all[0].name}}</h4>
         </a>
       </div>
     </div>
